Abstracted field import in import_to_patient_table

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "import os\n",
     "import errno\n",
     "import sys\n",
+    "from typing import List\n",
     "\n",
     "dataset_folder = '../Caisis_NonPublicData/Brain_nov2021'\n",
     "diseaseChosen = 'Brain'\n",
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,13 +57,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_patients_first_dx():\n",
     "    global patients_first_dx, data_clinical_patient\n",
-    "    print(\"==================================\")\n",
+    "    print(\"\\nSTEP 1: Find patients' first diagnosis date.\")\n",
     "    print(dataset_folder)\n",
     "    status_fullpath = dataset_folder +'/raw_csv/Status.csv'\n",
     "    if not os.path.exists(dataset_folder +'/raw_csv'):\n",
@@ -92,8 +93,6 @@
     "            print('REMOVED NoDxDate.txt')\n",
     "            \n",
     "    diseaseDatedRows = diseaseRows[diseaseRows.Date.isna()==False]\n",
-    "    #print(diseaseRows[diseaseRows.PatientId.eq('1920')])\n",
-    "    print('----')\n",
     "    patientid_date_dict = {}\n",
     "    for index, row in diseaseDatedRows.iterrows():\n",
     "        pid = str(row['PatientId'])\n",
@@ -102,9 +101,6 @@
     "        else:\n",
     "            pass\n",
     "    print('Resulting patient IDs = ' + str(len(patientid_date_dict)))   \n",
-    "    #patients_first_dx = pd.DataFrame.from_dict(patientid_date_dict, orient='index', columns=['PatientId'])\n",
-    "    #patients_first_dx.set_index('PatientId', inplace=True)  \n",
-    "    #patients_first_dx\n",
     "\n",
     "    data = []\n",
     "    for key in patientid_date_dict.keys():\n",
@@ -121,12 +117,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_all_tables():\n",
     "    global loaded_tables_dict\n",
+    "    print(\"\\nSTEP 2: Load all CSV tables.\")\n",
     "    for tableName in knownTables:\n",
     "        full_path = dataset_folder+'/raw_csv/'+tableName+'.csv'\n",
     "        if not os.path.exists(full_path):\n",
@@ -142,47 +139,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_demographics():\n",
-    "    tname = \"Demographics\"\n",
-    "    global patients_first_dx, data_clinical_patient, loaded_tables_dict\n",
-    "    if (tname in loaded_tables_dict) == False:\n",
-    "        print(\"WARN -- Could not process table \"+tname)\n",
-    "    else:\n",
-    "        current_table = loaded_tables_dict[tname]\n",
+    "class ImportField:\n",
+    "    source_name:str\n",
+    "    final_name:str\n",
+    "    numeric:bool = False\n",
+    "    conversion_function = None\n",
     "\n",
-    "        if 'PtGender' in current_table.columns:\n",
-    "            data_clinical_patient.insert(1, 'PtGender', None)\n",
-    "\n",
-    "            def setGender(pid):\n",
-    "                gg = current_table.loc[current_table['PatientId'] == str(pid)]\n",
-    "                return gg['PtGender'].iloc[0]   \n",
-    "\n",
-    "            gender_results = data_clinical_patient['PatientId'].apply(setGender)\n",
-    "            #print(\"results......\")\n",
-    "            #print(gender_results)\n",
-    "            data_clinical_patient['PtGender'] = gender_results\n",
-    "            #print(data_clinical_patient.head(12))\n"
+    "    def __init__(self, source_name, final_name, numeric=False, conversion_function=None):\n",
+    "        self.source_name = source_name\n",
+    "        self.final_name = final_name\n",
+    "        self.numeric = numeric\n",
+    "        self.conversion_function = conversion_function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_lookup_field = 'notPtGender'\n",
+    "noval_list = []\n",
+    "\n",
+    "# imports: a dictionary of column name from the tname table, where value is a function to convert data\n",
+    "def import_to_patient_table(tname, import_fields:List[ImportField]):\n",
+    "    global patients_first_dx, data_clinical_patient, loaded_tables_dict, current_lookup_field, noval_list\n",
+    "    if (tname in loaded_tables_dict) == False:\n",
+    "        print(\"WARN -- Could not process table \"+tname)\n",
+    "    else:\n",
+    "        current_table = loaded_tables_dict[tname]\n",
+    "        for ifield in import_fields:\n",
+    "\n",
+    "            if ifield.source_name in current_table.columns:\n",
+    "                data_clinical_patient.insert(1, ifield.final_name, None)\n",
+    "               # global current_lookup_field\n",
+    "                current_lookup_field= ifield.source_name\n",
+    "                print(\"Looking for field \" + tname+\".\"+current_lookup_field)\n",
+    "                noval_list.clear()\n",
+    "\n",
+    "                def getFieldValue(pid):\n",
+    "                    global current_lookup_field, noval_list\n",
+    "                    gg = current_table.loc[current_table['PatientId'] == str(pid)]\n",
+    "                    hh = gg[current_lookup_field]\n",
+    "\n",
+    "                    try:\n",
+    "                        return hh.iloc[0] \n",
+    "                    except:\n",
+    "                        noval_list.append(pid)\n",
+    "                        return None \n",
+    "\n",
+    "                new_values = data_clinical_patient['PatientId'].apply(getFieldValue)\n",
+    "                if len(noval_list) > 0 :\n",
+    "                    percent_str = \"{0:.0%}\".format(len(noval_list) / new_values.shape[0])\n",
+    "                    print(\"- Field \" + tname+\".\"+current_lookup_field + \" had \" + str(len(noval_list)) + \" empty entries. (\"+percent_str+\" empty)\")\n",
+    "                    #print(str( len(noval_list) / new_values.shape[0]))\n",
+    "\n",
+    "\n",
+    "                data_clinical_patient[ifield.final_name] = new_values\n",
+    "                #print(data_clinical_patient.head(12))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "==================================\n",
+      "\n",
+      "STEP 1: Find patients' first diagnosis date.\n",
       "../Caisis_NonPublicData/Brain_nov2021\n",
       "CHECK NoDxDate? REPORT NoDxDate.txt has *6* diagnoses of Brain without diagnosis dates.\n",
-      "----\n",
       "Resulting patient IDs = 2164\n",
       "(2164, 2)\n",
+      "\n",
+      "STEP 2: Load all CSV tables.\n",
       "Reading Clinical Stages.csv...\n",
       "Reading Demographics.csv...\n",
       "Reading Encounters.csv...\n",
@@ -191,7 +228,16 @@
       "Reading Procedures.csv...\n",
       "Reading Radiation.csv...\n",
       "WARN -- missing table Social History\n",
-      "================gender===\n",
+      "\n",
+      "STEP 3: Import columns to patient table.\n",
+      "Looking for field Demographics.PtGender\n",
+      "Looking for field Demographics.PtBirthDate\n",
+      "Looking for field Social History.SocHxTobaccoType\n",
+      "- Field Social History.SocHxTobaccoType had 2150 empty entries. (99% empty)\n",
+      "Looking for field Social History.SocHxTobaccoYears\n",
+      "- Field Social History.SocHxTobaccoYears had 2150 empty entries. (99% empty)\n",
+      "Looking for field Social History.SocHxAlcohol\n",
+      "- Field Social History.SocHxAlcohol had 2150 empty entries. (99% empty)\n",
       "DONE\n"
      ]
     }
@@ -201,10 +247,23 @@
     "print(patients_first_dx.shape)\n",
     "load_all_tables()\n",
     "\n",
-    "process_demographics()\n",
+    "print(\"\\nSTEP 3: Import columns to patient table.\")\n",
+    "import_fields = [\n",
+    "    ImportField('PtGender', final_name='Sex') ,   #, conversion_function=None, numeric=False),\n",
+    "    ImportField('PtBirthDate', final_name='BirthDate' )\n",
+    "]\n",
+    "import_to_patient_table('Demographics', import_fields)\n",
+    "\n",
+    "import_fields = [\n",
+    "    ImportField('SocHxTobaccoType', final_name='Tobacco_Use'),\n",
+    "    ImportField('SocHxTobaccoYears', final_name='Tobacco_Years' ), #SocHxAlcohol\n",
+    "    ImportField('SocHxAlcohol', final_name='Alcohol_Use')\n",
+    "]\n",
+    "import_to_patient_table('Social History', import_fields)\n",
+    "\n",
     "\n",
     "print(\"DONE\")\n",
-    "#print(data_clinical_patient.to_string())\n"
+    "# print(data_clinical_patient.to_string())\n"
    ]
   },
   {
