Output to 01_with_headers, writes in cBioPOrtal format. Type is assumed STRING for all for now.

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,27 +13,53 @@
     "# . ExportAsTSVs\n",
     "# . ZeroDates\n",
     "# . \n",
+    "\n",
+    "\n",
     "import pandas as pd\n",
     "import os\n",
     "import errno\n",
     "import sys\n",
+    "import datetime\n",
     "from typing import List\n",
     "\n",
     "dataset_folder = '../Caisis_NonPublicData/Brain_nov2021'\n",
     "diseaseChosen = 'Brain'\n",
-    "#knownTables = ['Demographics', 'Encounters', 'ClinicalStage', 'LabTests', 'PathTest', 'SocialHistory', 'LabTestGenetics', 'PathStageGrade', 'RadiationTherapy',  ]\n",
+    "## knownTables = ['Demographics', 'Encounters', 'ClinicalStage', 'LabTests', 'PathTest', 'SocialHistory', 'LabTestGenetics', 'PathStageGrade', 'RadiationTherapy',  ]\n",
     "# table Status is treated separately, first.\n",
     "knownTables = ['Clinical Stages', 'Demographics', 'Encounters', 'Medical Therapy', 'Pathology', 'Procedures', 'Radiation', 'Social History']\n",
     "patients_first_dx = pd.DataFrame()   # just PatientId and DiagnosisDate\n",
     "data_clinical_patient = pd.DataFrame() # Will become the data_clinical_patient table.\n",
     "loaded_tables_dict = {}\n",
     "\n",
-    "days_before_dx_to_include = 0  # if 30, can include events up to 30 days before the diagnosis date.\n"
+    "\n",
+    "days_before_dx_to_include = 0  # if 30, can include events up to 30 days before the diagnosis date.\n",
+    "\n",
+    "\n",
+    "data_clinical_patient = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ImportField:\n",
+    "    source_name:str\n",
+    "    final_name:str\n",
+    "    source_type:any = any\n",
+    "    conversion_function = None\n",
+    "\n",
+    "    def __init__(self, source_name, final_name, numeric=False, conversion_function=None, source_type=any):\n",
+    "        self.source_name = source_name\n",
+    "        self.final_name = final_name\n",
+    "        self.numeric = numeric\n",
+    "        self.conversion_function = conversion_function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,12 +83,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_patients_first_dx():\n",
-    "    global patients_first_dx, data_clinical_patient\n",
+    "    global patients_first_dx, data_clinical_patient, dataset_folder\n",
     "    print(\"\\nSTEP 1: Find patients' first diagnosis date.\")\n",
     "    print(dataset_folder)\n",
     "    status_fullpath = dataset_folder +'/raw_csv/Status.csv'\n",
@@ -117,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,26 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ImportField:\n",
-    "    source_name:str\n",
-    "    final_name:str\n",
-    "    numeric:bool = False\n",
-    "    conversion_function = None\n",
-    "\n",
-    "    def __init__(self, source_name, final_name, numeric=False, conversion_function=None):\n",
-    "        self.source_name = source_name\n",
-    "        self.final_name = final_name\n",
-    "        self.numeric = numeric\n",
-    "        self.conversion_function = conversion_function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +188,7 @@
     "                print(\"Looking for field \" + tname+\".\"+current_lookup_field)\n",
     "                noval_list.clear()\n",
     "\n",
-    "                def getFieldValue(pid):\n",
+    "                def get_field_value(pid):\n",
     "                    global current_lookup_field, noval_list\n",
     "                    gg = current_table.loc[current_table['PatientId'] == str(pid)]\n",
     "                    hh = gg[current_lookup_field]\n",
@@ -192,10 +199,10 @@
     "                        noval_list.append(pid)\n",
     "                        return None \n",
     "\n",
-    "                new_values = data_clinical_patient['PatientId'].apply(getFieldValue)\n",
+    "                new_values = data_clinical_patient['PatientId'].apply(get_field_value)\n",
     "                if len(noval_list) > 0 :\n",
     "                    percent_str = \"{0:.0%}\".format(len(noval_list) / new_values.shape[0])\n",
-    "                    print(\"- Field \" + tname+\".\"+current_lookup_field + \" had \" + str(len(noval_list)) + \" empty entries. (\"+percent_str+\" empty)\")\n",
+    "                    print(\"- Field \" + tname+\".\"+current_lookup_field + \" had \" + str(len(noval_list)) + \" missing entries. (\"+percent_str+\" empty)\")\n",
     "                    #print(str( len(noval_list) / new_values.shape[0]))\n",
     "\n",
     "\n",
@@ -205,65 +212,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def import_fields_to_patient_table():\n",
+    "    print(\"\\nSTEP 3: Import columns to patient table.\")\n",
+    "    import_fields = [\n",
+    "        ImportField('PtGender', final_name='Sex') ,   #, conversion_function=None),\n",
+    "        ImportField('PtBirthDate', final_name='BirthDate' )\n",
+    "    ]\n",
+    "    import_to_patient_table('Demographics', import_fields)\n",
+    "\n",
+    "    import_fields = [\n",
+    "        ImportField('SocHxTobaccoType', final_name='Tobacco_Use'),\n",
+    "        ImportField('SocHxTobaccoYears', final_name='Tobacco_Years' ), #SocHxAlcohol\n",
+    "        ImportField('SocHxAlcohol', final_name='Alcohol_Use')\n",
+    "    ]\n",
+    "    import_to_patient_table('Social History', import_fields)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_file_as_cbioportal(df:pd.DataFrame, output_filename):\n",
+    "    filename = dataset_folder + \"/01_with_headers/\" + output_filename\n",
+    "    if not os.path.exists(os.path.dirname(filename)):\n",
+    "        try:\n",
+    "            os.makedirs(os.path.dirname(filename))\n",
+    "        except OSError as exc: # Guard against race condition\n",
+    "            if exc.errno != errno.EEXIST:\n",
+    "                raise\n",
+    "\n",
+    "    with open(filename, \"w\") as f:\n",
+    "        col_names_raw = list(data_clinical_patient.columns.values)\n",
+    "        col_names = [x.upper() for x in col_names_raw]\n",
+    "        f.write('#' + '\\t'.join(col_names) + \"\\n\") # header 1, internal name\n",
+    "        f.write('#' + '\\t'.join(col_names) + \"\\n\")  # header 2, description\n",
+    "        f.write('#' + '\\t'.join(['STRING' ]* len(col_names)) + \"\\n\")  # header 3, type (STRING or NUMBER)  <<<<<\n",
+    "        f.write('#' + '\\t'.join(['1'] * len(col_names)) + \"\\n\")  # header 4, position\n",
+    "        f.write('\\t'.join(col_names) + \"\\n\")  # header 5, readable name\n",
+    "\n",
+    "        for index, row in df.iterrows():\n",
+    "            output_row = []\n",
+    "            row_as_list = list(row)\n",
+    "            for item in row_as_list:\n",
+    "                cleaned_item = str(item)\n",
+    "                if item == None:\n",
+    "                    cleaned_item = \"NA\"\n",
+    "                else:\n",
+    "                    if isinstance(item, datetime.datetime):\n",
+    "                        cleaned_item = \"DATE[\"+str(item)+\"]\"\n",
+    "                output_row.append(cleaned_item)\n",
+    "            items_to_str = '\\t'.join(output_row)\n",
+    "            f.write(items_to_str + \"\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_files_as_cbioportal():\n",
+    "    # clear out the folder, if it has files\n",
+    "    dir = dataset_folder + \"/01_with_headers/\" \n",
+    "    if not os.path.exists(dir):\n",
+    "        os.makedirs(dir)\n",
+    "        print(\"Created Directory : \", dir)\n",
+    "    else:\n",
+    "        print(\"Directory already existed : \", dir)  \n",
+    "        import shutil\n",
+    "        for root, dirs, files in os.walk(dir):\n",
+    "            for f in files:\n",
+    "                os.unlink(os.path.join(root, f))\n",
+    "\n",
+    "\n",
+    "    # loop through all table files\n",
+    "    write_file_as_cbioportal(data_clinical_patient, 'data_clinical_patient.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "STEP 1: Find patients' first diagnosis date.\n",
-      "../Caisis_NonPublicData/Brain_nov2021\n",
-      "CHECK NoDxDate? REPORT NoDxDate.txt has *6* diagnoses of Brain without diagnosis dates.\n",
-      "Resulting patient IDs = 2164\n",
-      "(2164, 2)\n",
-      "\n",
-      "STEP 2: Load all CSV tables.\n",
-      "Reading Clinical Stages.csv...\n",
-      "Reading Demographics.csv...\n",
-      "Reading Encounters.csv...\n",
-      "Reading Medical Therapy.csv...\n",
-      "Reading Pathology.csv...\n",
-      "Reading Procedures.csv...\n",
-      "Reading Radiation.csv...\n",
-      "WARN -- missing table Social History\n",
-      "\n",
-      "STEP 3: Import columns to patient table.\n",
-      "Looking for field Demographics.PtGender\n",
-      "Looking for field Demographics.PtBirthDate\n",
-      "Looking for field Social History.SocHxTobaccoType\n",
-      "- Field Social History.SocHxTobaccoType had 2150 empty entries. (99% empty)\n",
-      "Looking for field Social History.SocHxTobaccoYears\n",
-      "- Field Social History.SocHxTobaccoYears had 2150 empty entries. (99% empty)\n",
-      "Looking for field Social History.SocHxAlcohol\n",
-      "- Field Social History.SocHxAlcohol had 2150 empty entries. (99% empty)\n",
-      "DONE\n"
+      "Directory already existed :  ../Caisis_NonPublicData/Brain_nov2021/01_with_headers/\n"
      ]
     }
    ],
    "source": [
-    "find_patients_first_dx()\n",
-    "print(patients_first_dx.shape)\n",
-    "load_all_tables()\n",
-    "\n",
-    "print(\"\\nSTEP 3: Import columns to patient table.\")\n",
-    "import_fields = [\n",
-    "    ImportField('PtGender', final_name='Sex') ,   #, conversion_function=None, numeric=False),\n",
-    "    ImportField('PtBirthDate', final_name='BirthDate' )\n",
-    "]\n",
-    "import_to_patient_table('Demographics', import_fields)\n",
-    "\n",
-    "import_fields = [\n",
-    "    ImportField('SocHxTobaccoType', final_name='Tobacco_Use'),\n",
-    "    ImportField('SocHxTobaccoYears', final_name='Tobacco_Years' ), #SocHxAlcohol\n",
-    "    ImportField('SocHxAlcohol', final_name='Alcohol_Use')\n",
-    "]\n",
-    "import_to_patient_table('Social History', import_fields)\n",
-    "\n",
-    "\n",
-    "print(\"DONE\")\n",
-    "# print(data_clinical_patient.to_string())\n"
+    "write_files_as_cbioportal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['PatientId', 'Alcohol_Use', 'Tobacco_Years', 'Tobacco_Use', 'BirthDate', 'Sex', 'DiagnosisDate']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(data_clinical_patient.columns.values))"
    ]
   },
   {
@@ -271,7 +334,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "find_patients_first_dx()\n",
+    "print(patients_first_dx.shape)\n",
+    "load_all_tables()\n",
+    "import_fields_to_patient_table()\n",
+    "\n",
+    "print(\"DONE\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from zero_dates import square_plus, zero_dates\n",
+    "\n",
+    "square_plus(3)\n",
+    "\n",
+    "zero_dates('../Caisis_NonPublicData/Prostate_TAN')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "data_clinical_patient = patients_first_dx.copy()\n",
+    "import_fields_to_patient_table()\n",
+    "print(data_clinical_patient)"
+   ]
   }
  ],
  "metadata": {
