get_col_types() added. Allows typing. BUT depends on knowledge of patient table.

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,31 +35,37 @@
     "days_before_dx_to_include = 0  # if 30, can include events up to 30 days before the diagnosis date.\n",
     "\n",
     "\n",
-    "data_clinical_patient = None"
+    "data_clinical_patient = None\n",
+    "datafiles_fields = {\n",
+    "    'patient': []   #not including PATIENT_ID\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ImportField:\n",
     "    source_name:str\n",
     "    final_name:str\n",
-    "    source_type:any = any\n",
+    "    type:str = 'STRING'  # STRING, NUMBER, or DATE (DATE gets turned into STING in final TSV files.)\n",
     "    conversion_function = None\n",
     "\n",
-    "    def __init__(self, source_name, final_name, numeric=False, conversion_function=None, source_type=any):\n",
+    "    def __init__(self, source_name, final_name, type=\"STRING\", conversion_function=None ):\n",
     "        self.source_name = source_name\n",
     "        self.final_name = final_name\n",
-    "        self.numeric = numeric\n",
-    "        self.conversion_function = conversion_function"
+    "        self.type = type\n",
+    "        self.conversion_function = conversion_function\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return self.source_name +\"->\"+ self.final_name+\", type=\"+self.type+\".\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,12 +171,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "current_lookup_field = 'notPtGender'\n",
-    "noval_list = []\n",
+    "current_lookup_field = 'notPtGender'  # placeholder.\n",
+    "noval_list = []   # List of patient IDs with no associated value in one or more of the import_fields. Use this for reporting. \n",
+    "\n",
     "\n",
     "# imports: a dictionary of column name from the tname table, where value is a function to convert data\n",
     "def import_to_patient_table(tname, import_fields:List[ImportField]):\n",
@@ -212,47 +219,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "def import_fields_to_patient_table():\n",
+    "    # This is the core of specifying which fields we want to import. May change between datasets, so consider moving to an external file.\n",
+    "    \n",
     "    print(\"\\nSTEP 3: Import columns to patient table.\")\n",
     "    import_fields = [\n",
     "        ImportField('PtGender', final_name='Sex') ,   #, conversion_function=None),\n",
-    "        ImportField('PtBirthDate', final_name='BirthDate' )\n",
+    "        ImportField('PtBirthDate', final_name='BirthDate', type=\"DATE\" )\n",
     "    ]\n",
     "    import_to_patient_table('Demographics', import_fields)\n",
+    "    datafiles_fields['patient'].extend(import_fields)\n",
     "\n",
     "    import_fields = [\n",
     "        ImportField('SocHxTobaccoType', final_name='Tobacco_Use'),\n",
     "        ImportField('SocHxTobaccoYears', final_name='Tobacco_Years' ), #SocHxAlcohol\n",
     "        ImportField('SocHxAlcohol', final_name='Alcohol_Use')\n",
     "    ]\n",
-    "    import_to_patient_table('Social History', import_fields)"
+    "    import_to_patient_table('Social History', import_fields)\n",
+    "    datafiles_fields['patient'].extend(import_fields)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def write_file_as_cbioportal(df:pd.DataFrame, output_filename):\n",
-    "    filename = dataset_folder + \"/01_with_headers/\" + output_filename\n",
-    "    if not os.path.exists(os.path.dirname(filename)):\n",
+    "def get_col_types(filename):\n",
+    "    rr=reversed(list(map(lambda s: s.type, datafiles_fields[filename])))\n",
+    "    q=['STRING'] # for 'PatientID'\n",
+    "    q.extend(list(rr))\n",
+    "    q.append('DATE') # for 'DiagnosisDate'\n",
+    "    return q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_file_as_cbioportal(df:pd.DataFrame, filename):\n",
+    "    output_filename = 'data_clinical_'+filename+'.txt'\n",
+    "    full_filename = dataset_folder + \"/01_with_headers/\" + output_filename\n",
+    "    if not os.path.exists(os.path.dirname(full_filename)):\n",
     "        try:\n",
-    "            os.makedirs(os.path.dirname(filename))\n",
+    "            os.makedirs(os.path.dirname(full_filename))\n",
     "        except OSError as exc: # Guard against race condition\n",
     "            if exc.errno != errno.EEXIST:\n",
     "                raise\n",
     "\n",
-    "    with open(filename, \"w\") as f:\n",
+    "    with open(full_filename, \"w\") as f:\n",
     "        col_names_raw = list(data_clinical_patient.columns.values)\n",
     "        col_names = [x.upper() for x in col_names_raw]\n",
+    "        col_types = get_col_types(filename)  #  ['STRING' ]* len(col_names)\n",
+    "        # f.write('>>>'+str(\" \".join(str(datafiles_fields[filename]))))\n",
+    "\n",
     "        f.write('#' + '\\t'.join(col_names) + \"\\n\") # header 1, internal name\n",
     "        f.write('#' + '\\t'.join(col_names) + \"\\n\")  # header 2, description\n",
-    "        f.write('#' + '\\t'.join(['STRING' ]* len(col_names)) + \"\\n\")  # header 3, type (STRING or NUMBER)  <<<<<\n",
+    "        f.write('#' + '\\t'.join(col_types) + \"\\n\")  # header 3, type (STRING or NUMBER)  <<<<<\n",
     "        f.write('#' + '\\t'.join(['1'] * len(col_names)) + \"\\n\")  # header 4, position\n",
     "        f.write('\\t'.join(col_names) + \"\\n\")  # header 5, readable name\n",
     "\n",
@@ -273,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,12 +321,25 @@
     "\n",
     "\n",
     "    # loop through all table files\n",
-    "    write_file_as_cbioportal(data_clinical_patient, 'data_clinical_patient.txt')"
+    "    filename = 'patient'\n",
+    "    write_file_as_cbioportal(data_clinical_patient, filename)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "find_patients_first_dx()\n",
+    "print(patients_first_dx.shape)\n",
+    "load_all_tables()\n",
+    "import_fields_to_patient_table()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -327,20 +369,6 @@
    ],
    "source": [
     "print(list(data_clinical_patient.columns.values))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "find_patients_first_dx()\n",
-    "print(patients_first_dx.shape)\n",
-    "load_all_tables()\n",
-    "import_fields_to_patient_table()\n",
-    "\n",
-    "print(\"DONE\")\n"
    ]
   },
   {
