Type header line written correctly

--- a/CaisisImport.ipynb
+++ b/CaisisImport.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,22 +19,23 @@
     "import os\n",
     "import errno\n",
     "import sys\n",
-    "import datetime\n",
+    "#import datetime\n",
     "from typing import List\n",
+    "from datetime import datetime\n",
+    "from datetime import date\n",
     "\n",
     "dataset_folder = '../Caisis_NonPublicData/Brain_nov2021'\n",
     "diseaseChosen = 'Brain'\n",
     "## knownTables = ['Demographics', 'Encounters', 'ClinicalStage', 'LabTests', 'PathTest', 'SocialHistory', 'LabTestGenetics', 'PathStageGrade', 'RadiationTherapy',  ]\n",
     "# table Status is treated separately, first.\n",
     "knownTables = ['Clinical Stages', 'Demographics', 'Encounters', 'Medical Therapy', 'Pathology', 'Procedures', 'Radiation', 'Social History']\n",
+    "date_format = '%Y-%M-%d'  # '%d-%b-%y'   #'%b %d %Y %I:%M%p'\n",
+    "#days_before_dx_to_include = 0  # if 30, can include events up to 30 days before the diagnosis date.\n",
+    "\n",
+    "## -- internal --\n",
     "patients_first_dx = pd.DataFrame()   # just PatientId and DiagnosisDate\n",
     "data_clinical_patient = pd.DataFrame() # Will become the data_clinical_patient table.\n",
     "loaded_tables_dict = {}\n",
-    "\n",
-    "\n",
-    "days_before_dx_to_include = 0  # if 30, can include events up to 30 days before the diagnosis date.\n",
-    "\n",
-    "\n",
     "data_clinical_patient = None\n",
     "datafiles_fields = {\n",
     "    'patient': []   #not including PATIENT_ID\n",
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,12 +200,27 @@
     "                    global current_lookup_field, noval_list\n",
     "                    gg = current_table.loc[current_table['PatientId'] == str(pid)]\n",
     "                    hh = gg[current_lookup_field]\n",
-    "\n",
+    "                    val = None\n",
     "                    try:\n",
-    "                        return hh.iloc[0] \n",
+    "                        val = hh.iloc[0] \n",
+    "                        if ifield.type=='NUMBER':\n",
+    "                            val = val # convert to number\n",
+    "                        if ifield.type=='DATE':\n",
+    "                            print(\"val...\"+str(val))\n",
+    "                            if isinstance(val, str):\n",
+    "                                val = datetime.strptime(val, date_format)\n",
+    "                            else:\n",
+    "                                val=\"NOTSTR\" # TBD: error reporting\n",
+    "                        try:\n",
+    "                            return val\n",
+    "                        except:\n",
+    "                            noval_list.append(pid)\n",
+    "                            return None\n",
     "                    except:\n",
-    "                        noval_list.append(pid)\n",
-    "                        return None \n",
+    "                        print(\"ERROR \"+current_lookup_field+\", \"+str(pid)+\"   \"+str(val)+\".\")\n",
+    "                        typef, value, traceback = sys.exc_info()\n",
+    "                        print('Error value '+ str (value))\n",
+    "\n",
     "\n",
     "                new_values = data_clinical_patient['PatientId'].apply(get_field_value)\n",
     "                if len(noval_list) > 0 :\n",
@@ -215,6 +231,27 @@
     "\n",
     "                data_clinical_patient[ifield.final_name] = new_values\n",
     "                #print(data_clinical_patient.head(12))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1933-07-02'"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val = datetime.strptime('1933-07-02', '%Y-%M-%d')   # '%d-%b-%y'   #'%b %d %Y %I:%M%p'\n",
+    "datetime.strftime(val, '%Y-%M-%d')"
    ]
   },
   {
@@ -245,21 +282,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_col_types(filename):\n",
     "    rr=reversed(list(map(lambda s: s.type, datafiles_fields[filename])))\n",
-    "    q=['STRING'] # for 'PatientID'\n",
+    "    q=[]\n",
+    "    if filename=='patient':\n",
+    "        q.append('STRING') # for 'PatientID'\n",
     "    q.extend(list(rr))\n",
-    "    q.append('DATE') # for 'DiagnosisDate'\n",
+    "    if filename=='patient':\n",
+    "        q.append('DATE') # for 'DiagnosisDate'\n",
     "    return q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,21 +328,23 @@
     "        for index, row in df.iterrows():\n",
     "            output_row = []\n",
     "            row_as_list = list(row)\n",
+    "            i = 0\n",
     "            for item in row_as_list:\n",
     "                cleaned_item = str(item)\n",
     "                if item == None:\n",
     "                    cleaned_item = \"NA\"\n",
     "                else:\n",
-    "                    if isinstance(item, datetime.datetime):\n",
-    "                        cleaned_item = \"DATE[\"+str(item)+\"]\"\n",
+    "                    if 'time' in str(type(item)):   # datetime.datetime or pandas...timestamp.Timestamp\n",
+    "                        cleaned_item = datetime.strftime(item, '%Y-%M-%d')\n",
     "                output_row.append(cleaned_item)\n",
+    "                i = i+1\n",
     "            items_to_str = '\\t'.join(output_row)\n",
     "            f.write(items_to_str + \"\\n\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -356,19 +398,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['PatientId', 'Alcohol_Use', 'Tobacco_Years', 'Tobacco_Use', 'BirthDate', 'Sex', 'DiagnosisDate']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(list(data_clinical_patient.columns.values))"
+    "print(list(data_clinical_patient.columns.values))\n",
+    "print(data_clinical_patient['BirthDate'])"
    ]
   },
   {
